Edit db connect

--- a/Presentation/WebAPI/appsettings.Development.json
+++ b/Presentation/WebAPI/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
     "ConnectionStrings": {
-        "CoreDb": "Server=localhost;Database=postgres;User Id=postgres;Password=postgres;"
+        "CoreDb": "Server=10.32.4.152;Database=webcv.dev;User Id=webcv;Password=INESEarT;"
     },
   "AuthSetting": {
     "JWTSecret": "is_Private@token"
