--- a/Presentation/WebAPI/appsettings.Development.json
+++ b/Presentation/WebAPI/appsettings.Development.json
@@ -5,9 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "ConnectionStrings": {
-        "CoreDb": "Server=10.32.4.152;Database=webcv.dev;User Id=webcv;Password=INESEarT;"
-    },
+  "ConnectionStrings": {
+    "CoreDb": "Server=10.32.4.152;Database=webcv.dev;User Id=webcv;Password=INESEarT;"
+    //"CoreDb": "Server=localhost;Database=postgres;User Id=postgres;Password=postgres;"
+  },
   "AuthSetting": {
     "JWTSecret": "is_Private@token"
   }
