--- a/Presentation/WebAPI/appsettings.Staging.json
+++ b/Presentation/WebAPI/appsettings.Staging.json
@@ -5,9 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "ConnectionStrings": {
-        "CoreDb": "Server=10.32.4.152;Database=webcv.dev;User Id=webcv;Password=INESEarT;"
-    },
+  "ConnectionStrings": {
+    "CoreDb": "Server=10.32.4.152;Database=webcv.staging;User Id=webcv;Password=INESEarT;"
+  },
   "AuthSetting": {
     "JWTSecret": "is_Private@token"
   }
