--- a/Presentation/WebAPI/appsettings.Development.json
+++ b/Presentation/WebAPI/appsettings.Development.json
@@ -6,8 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "CoreDb": "Server=10.32.4.152;Database=webcv.dev;User Id=webcv;Password=INESEarT;"
+    // "CoreDb": "Server=10.32.4.152;Database=webcv.dev;User Id=webcv;Password=INESEarT;"
     //"CoreDb": "Server=localhost;Database=postgres;User Id=postgres;Password=postgres;"
+    "CoreDb": "Server=localhost;Database=webcv.dev;User Id=postgres;Password=password;"
   },
   "AuthSetting": {
     "JWTSecret": "is_Private@token"
