--- a/Presentation/WebAPI/WebAPI.csproj
+++ b/Presentation/WebAPI/WebAPI.csproj
@@ -1,46 +1,48 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-	<GenerateDocumentationFile>true</GenerateDocumentationFile>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<EnableDefaultContentItems>false</EnableDefaultContentItems>
+		<!-- Disable default content inclusion -->
+	</PropertyGroup>
 
-  <ItemGroup>
-	  <Compile Remove="Controllers\Sale\**" />
-	  <Content Remove="Controllers\Sale\**" />
-	  <EmbeddedResource Remove="Controllers\Sale\**" />
-	  <None Remove="Controllers\Sale\**" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="Controllers\Sale\**" />
+		<Content Remove="Controllers\Sale\**" />
+		<EmbeddedResource Remove="Controllers\Sale\**" />
+		<None Remove="Controllers\Sale\**" />
+	</ItemGroup>
 
-  <ItemGroup>
-	  <Content Include="wwwroot\**\*.*" CopyToOutputDirectory="PreserveNewest" />
-  </ItemGroup>
+	<ItemGroup>
+		<Content Include="wwwroot\**\*.*" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="11.0.1" />
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-    <PackageReference Include="DocumentFormat.OpenXml" Version="2.16.0" />
-    <PackageReference Include="FluentValidation" Version="11.1.0" />
-    <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="11.0.1" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+		<PackageReference Include="DocumentFormat.OpenXml" Version="2.16.0" />
+		<PackageReference Include="FluentValidation" Version="11.1.0" />
+		<PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Application\Application.Common\Application.Common.csproj" />
-    <ProjectReference Include="..\..\Application\Application.Core\Application.Core.csproj" />
-    <ProjectReference Include="..\..\Framework\Framework.Core\Framework.Core.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\Application\Application.Common\Application.Common.csproj" />
+		<ProjectReference Include="..\..\Application\Application.Core\Application.Core.csproj" />
+		<ProjectReference Include="..\..\Framework\Framework.Core\Framework.Core.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Controllers\Application\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="Controllers\Application\" />
+	</ItemGroup>
 
 </Project>
